kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects
  namespace: flaskdocker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: projects
          image: bojanpetrov/flaskdocker:latest
          ports:
            - containerPort: 4000
