kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flaskdocker
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
